--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+.wrapper { overscroll-behavior: none;}
+
 table {
     width: 100%;
     height: 500px;
@@ -6,8 +8,26 @@ table {
     touch-action: none;
     user-select: none;
     font-size: 60px;
+    -webkit-touch-callout: none; /* Safari */
+    -webkit-user-select: none; /* Chrome */     
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; 
   }
 
   tr {
     background-color: #29e;
+    -webkit-touch-callout: none; /* Safari */
+    -webkit-user-select: none; /* Chrome */     
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; 
+  }
+
+  div {
+    -webkit-touch-callout: none; /* Safari */
+    -webkit-user-select: none; /* Chrome */     
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; 
   }
